--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://yehuihui.github.io
 baseurl: /yehuihui/
 
 # Site settings
-title: 叶灰灰的小学校
+title: 星生代音乐之星培训连锁学校
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
