--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ people:
 - name: 容媛老师
   pic: 1
   position: 声乐老师
+  resume: 性格活泼开朗，细心有耐心，善于沟通。自幼学习声乐演唱，师从武汉音乐学院声乐系教授多年，成绩优异，多次获得省级，国家级声乐奖项。18岁以全国优异的成绩考入武汉音乐学院学习声乐演唱，师从张锦老师。22岁考入武汉音乐学院表演与教学专业美声方向学术型研究生，师从王丽君教授。在校期间多次获得省级，国家级比赛奖项。在校期间，不仅勤奋好学，并且利用课余时间勤工俭学，积累了丰富的教学经验，深受学生家长的喜爱，所教学生多次获得各类比赛奖项。该教师目前任职于武汉圣桑考前音乐教育咨询中心，担任声乐老师。工作期间学生数量逐年增加，举办大小型音乐会等活动多次，学生进步明显，获得了家长及学校的一致认可。
   social:
     - title: twitter
       url: #
@@ -28,6 +29,7 @@ people:
 - name: 韩心怡老师
   pic: 2
   position: 理论老师
+  resume: 一位具有高度的工作热情和丰富的教学经验的老师，毕业于武汉音乐学院，专修理论方向，有多年的理论教学经验。曾在湖北宜昌三峡艺术高中担任音乐教师一职，并受聘于华中师范大学校医院学障康复中心，担任见习治疗师一职。她沉着耐心，认真负责，对乐理，曲式与音乐作品分析，音乐心理学，音乐治疗的心理学基础，普通心理学，音乐教育学理论，艺术概论，音乐教材教法与课堂设计，音乐治疗实习督导等理论学科有较深的研究。她多才多艺，除理论知识外，还对流行音乐写作填词有一定的研究。该教师目前任职于武汉圣桑考前音乐教育咨询中心，担任声乐老师。工作期间学生数量逐年增加，举办大小型音乐会等活动多次，学生进步明显，获得了家长及学校的一致认可。
   social:
     - title: twitter
       url: #
@@ -39,6 +41,7 @@ people:
 - name: 霍诗莹老师
   pic: 3
   position: 声乐老师
+  resume: 一位学习能力强十分强的老师，曾就读于圣桑考前咨询培训中心，10年考入武汉音乐学院，师从万敬之副教授，14年考入武汉音乐学院声乐系研究生，师从张霞副教授。在校期间，曾获得“香港国际声乐公开赛湖北赛区意大利歌剧组一等奖”，“中华五洲行世界华人青少年艺术节美声唱法专业青年组金奖”，普通话二级甲等证书等荣誉。霍诗莹老师耐心仔细，平易近人，能较好的和学生沟通，发现及解决问题，任教期间深受家长，学生一致好评。该教师目前任职于武汉圣桑考前音乐教育咨询中心，担任声乐老师。工作期间学生数量逐年增加，举办大小型音乐会等活动多次，学生进步明显，获得了家长及学校的一致认可。
   social:
     - title: twitter
       url: #
