--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,42 @@ people:
     - title: google-plus
       url: #
 
+- name: 霍诗莹老师
+  pic: 3
+  position: 声乐老师
+  resume: 一位学习能力强十分强的老师，曾就读于圣桑考前咨询培训中心，10年考入武汉音乐学院，师从万敬之副教授，14年考入武汉音乐学院声乐系研究生，师从张霞副教授。在校期间，曾获得“香港国际声乐公开赛湖北赛区意大利歌剧组一等奖”，“中华五洲行世界华人青少年艺术节美声唱法专业青年组金奖”，普通话二级甲等证书等荣誉。霍诗莹老师耐心仔细，平易近人，能较好的和学生沟通，发现及解决问题，任教期间深受家长，学生一致好评。该教师目前任职于武汉圣桑考前音乐教育咨询中心，担任声乐老师。工作期间学生数量逐年增加，举办大小型音乐会等活动多次，学生进步明显，获得了家长及学校的一致认可。
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: google-plus
+      url: #
+
+- name: 霍诗莹老师
+  pic: 3
+  position: 声乐老师
+  resume: 一位学习能力强十分强的老师，曾就读于圣桑考前咨询培训中心，10年考入武汉音乐学院，师从万敬之副教授，14年考入武汉音乐学院声乐系研究生，师从张霞副教授。在校期间，曾获得“香港国际声乐公开赛湖北赛区意大利歌剧组一等奖”，“中华五洲行世界华人青少年艺术节美声唱法专业青年组金奖”，普通话二级甲等证书等荣誉。霍诗莹老师耐心仔细，平易近人，能较好的和学生沟通，发现及解决问题，任教期间深受家长，学生一致好评。该教师目前任职于武汉圣桑考前音乐教育咨询中心，担任声乐老师。工作期间学生数量逐年增加，举办大小型音乐会等活动多次，学生进步明显，获得了家长及学校的一致认可。
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: google-plus
+      url: #
+
+- name: 霍诗莹老师
+  pic: 3
+  position: 声乐老师
+  resume: 一位学习能力强十分强的老师，曾就读于圣桑考前咨询培训中心，10年考入武汉音乐学院，师从万敬之副教授，14年考入武汉音乐学院声乐系研究生，师从张霞副教授。在校期间，曾获得“香港国际声乐公开赛湖北赛区意大利歌剧组一等奖”，“中华五洲行世界华人青少年艺术节美声唱法专业青年组金奖”，普通话二级甲等证书等荣誉。霍诗莹老师耐心仔细，平易近人，能较好的和学生沟通，发现及解决问题，任教期间深受家长，学生一致好评。该教师目前任职于武汉圣桑考前音乐教育咨询中心，担任声乐老师。工作期间学生数量逐年增加，举办大小型音乐会等活动多次，学生进步明显，获得了家长及学校的一致认可。
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: google-plus
+      url: #
+
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
